# beliefbot

./: .gitignore  belief_engine.py  experiment_runner.py  plot_results.py  pyproject.toml  simulate.py
api/: main.py
beliefbot/: __init__.py
beliefbot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
results/: simulation_results.csv
tests/: test_belief_engine.py
