[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beliefbot"
version = "0.1.0"
description = "Bayesian and confirmation-biased belief updating for jar-and-ball experiments"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["beliefbot*"]
